--- a/src/base_style.scss
+++ b/src/base_style.scss
@@ -1,3 +1,11 @@
 @import './node_modules/foundation-sites/scss/foundation.scss';
 
-@include foundation-everything;
+@include foundation-everything(true);
+
+body {
+  width: 100%;
+
+  #root {
+    width: inherit;
+  }
+}
